css/main.css
.spa-content {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  font-family: 'Lobster Two', cursive;
  font-size: 30px;
  color: black;
  background: #48611b;
}

/*list-page header*/

.list {
  background: orange;
  width: 375px;
  height: 75px;
  text-align: center;
  padding-top: 20px;
  margin-bottom: 20px;
}

/*list-page body*/

.panel-1 {
  /*background: #48611b;*/
  height: 750px;
  width: 375px;
  /*opacity: 0.7;*/
}

/*list-page button*/

.add-appt {
  float: right;
  position: relative;
  top: -40px;
  margin: 5px;
  padding: 0  5px 0 5px;
  background: yellow;
  color: black;
  text-transform: uppercase;
  font-family: 'Cabin', sans-serif;
  font-size: 30px;
  border-radius: 5px;
  border: none;
  outline: none;
}

.panel-1 li {
  color: black;
  font-size: 16px;
  margin: auto;
  text-align: center;
  padding: 5px;
}

/*indiviual appt items on list page*/

.app-item {
  width: 225px;
  border: 3px double red;
  padding: 5px;
  margin: auto;
  margin-bottom: 10px;
  background: white;
  font-size: 25px;
}

.app-item li {
  font-size: 22px;
}

/*new-appt page header*/

.new-appt {
  background: pink;
  width: 375px;
  height: 75px;
  text-align: center;
  margin: auto;
  padding-top: 20px;
  margin-bottom: 20px;
}

/*new-appt body*/

.panel-2 {
  background: purple;
  height: 750px;
  width: 375px;
}

/*new-appt button*/

.show-list-page {
  float: right;
  position: relative;
  top: 10px;
  margin: 5px;
  padding: 0  5px 0 5px;
  background: yellow;
  color: black;
  text-transform: uppercase;
  font-family: 'Cabin', sans-serif;
  font-size: 15px;
  border-radius: 5px;
  border: none;
  outline: none;
}

/*appt-info forms */

.appt-info {
  padding-top: 15px;
  text-align: center;
}

.appt-info input {
  display: block;
  padding: 1em;
  margin: auto;
  width: 300px;
  font-family: 'Cabin', sans-serif;
  outline-color: #ae2cc2;
  font-size: 18px;
}

textarea {
  display: block;
  padding: 1em;
  margin: auto;
  width: 303px;
  font-family: 'Cabin', sans-serif;
  outline-color: #ae2cc2;
  font-size: 18px;
}

textarea, .datepicker, .timepicker {
  outline-color: #ae2cc2;
}

.save-it, .return-to-list {
  width: 300px;
  margin: auto;
  margin-top: 15px;
  padding: 5px;
  background: yellow;
  color: black;
  text-transform: uppercase;
  font-family: 'Cabin', sans-serif;
  font-size: 15px;
  border-radius: 5px;
  border: none;
  outline-color: #ae2cc2;
}

.panel-3 {
  background: orange;
  height: 750px;
  width: 375px;
}

.appt-details {
  font-size: 40px;
  text-align: center;
  background: yellow;
  width: 375px;
  height: 75px;
  padding-top: 20px;
  margin-bottom: 20px;
}

.deet-view {
  padding: 10px;
  width: 300px;
  height: auto;
  background: white;
  margin: auto;
  margin-top: 60px;
  text-align: center;
  border: 5px double red;
}

.deet-view li {
  list-style-type: none;
  text-align: center;
  padding-top: 10px;
  margin-bottom: 10px;
}

.weather {
  padding: 10px;
  width: 300px;
  height: 100px;
  background: white;
  margin: auto;
  margin-top: 60px;
  text-align: center;
  border: 5px double red;
}

.weather h3 {
  padding-top: 25px;
  font-size: 40px;
}

